{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 159,
  "lineage": "683869a6-4c4f-d4dd-c913-46fb0e2abc45",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:268236304346:loadbalancer/app/dev-sap-alb/a0e2d6e657b9cbb2",
            "arn_suffix": "app/dev-sap-alb/a0e2d6e657b9cbb2",
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-sap-alb-1175141198.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:268236304346:loadbalancer/app/dev-sap-alb/a0e2d6e657b9cbb2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-sap-alb",
            "security_groups": [
              "sg-046872e43acfb6103"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-049a22aea54de313f"
              },
              {
                "subnet_id": "subnet-0e7ac9ebdb52ec26c"
              }
            ],
            "subnets": [
              "subnet-049a22aea54de313f",
              "subnet-0e7ac9ebdb52ec26c"
            ],
            "tags": {
              "Name": "dev-sap-alb"
            },
            "tags_all": {
              "Name": "dev-sap-alb"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-064730aa0adf435ff",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:268236304346:listener/app/dev-sap-alb/a0e2d6e657b9cbb2/ad85ee5619e64f4b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:268236304346:targetgroup/app1-20221110145303366000000001/761030c389868f9e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:268236304346:listener/app/dev-sap-alb/a0e2d6e657b9cbb2/ad85ee5619e64f4b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:268236304346:loadbalancer/app/dev-sap-alb/a0e2d6e657b9cbb2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.private_instance.aws_instance.this",
            "module.private_instance.aws_spot_instance_request.this",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:268236304346:targetgroup/app1-20221110145303366000000001/761030c389868f9e",
            "arn_suffix": "targetgroup/app1-20221110145303366000000001/761030c389868f9e",
            "connection_termination": false,
            "deregistration_delay": "10",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/app1/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:268236304346:targetgroup/app1-20221110145303366000000001/761030c389868f9e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "app1-20221110145303366000000001",
            "name_prefix": "app1-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "InstanceTargetGroupTag": "baz",
              "Name": "app1-"
            },
            "tags_all": {
              "InstanceTargetGroupTag": "baz",
              "Name": "app1-"
            },
            "target_type": "instance",
            "vpc_id": "vpc-064730aa0adf435ff"
          },
          "dependencies": [
            "module.private_instance.aws_instance.this",
            "module.private_instance.aws_spot_instance_request.this",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0.my_app1_vm1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:268236304346:targetgroup/app1-20221110145303366000000001/761030c389868f9e-20221110145312800300000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:268236304346:targetgroup/app1-20221110145303366000000001/761030c389868f9e",
            "target_id": "i-022312c0550474f5f"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.main",
            "module.private_instance.aws_instance.this",
            "module.private_instance.aws_spot_instance_request.this",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:268236304346:security-group/sg-046872e43acfb6103",
            "description": "Security Group with HTTP open for entire Internet (IPv4 CIDR), egress ports are all world open",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-046872e43acfb6103",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 81 from internet",
                "from_port": 81,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 81
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "loadbalancer-sg-20221110144834467900000002",
            "name_prefix": "loadbalancer-sg-",
            "owner_id": "268236304346",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "loadbalancer-sg",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "loadbalancer-sg",
              "environment": "dev",
              "owners": "sap"
            },
            "timeouts": null,
            "vpc_id": "vpc-064730aa0adf435ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-4859180",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-046872e43acfb6103",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-912357610",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-046872e43acfb6103",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow Port 81 from internet",
            "from_port": 81,
            "id": "sgrule-641202548",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-046872e43acfb6103",
            "self": false,
            "source_security_group_id": null,
            "to_port": 81,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "module.loadbalancer_sg.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c4e4b4eb2e11d1d4",
            "arn": "arn:aws:ec2:us-east-1:268236304346:instance/i-022312c0550474f5f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-022312c0550474f5f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0999db00e00640774",
            "private_dns": "ip-10-0-1-44.ec2.internal",
            "private_ip": "10.0.1.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03355fc7be6ac3427",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e7ac9ebdb52ec26c",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vm",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vm",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "dev-vm"
            },
            "vpc_security_group_ids": [
              "sg-0adc13d454ab41bf7"
            ]
          },
          "dependencies": [
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "data.aws_ami.amzlinux2",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.private_sg.aws_security_group.this",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_vpn_gateway_attachment.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.private_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:268236304346:security-group/sg-0adc13d454ab41bf7",
            "description": "Security Group with HTTP \u0026 SSH port open for entire VPC Block (IPv4 CIDR), egress ports are all world open",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0adc13d454ab41bf7",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private-sg-20221110144834469500000003",
            "name_prefix": "private-sg-",
            "owner_id": "268236304346",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-sg",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "private-sg",
              "environment": "dev",
              "owners": "sap"
            },
            "timeouts": null,
            "vpc_id": "vpc-064730aa0adf435ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-1501624387",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0adc13d454ab41bf7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-362325092",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0adc13d454ab41bf7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-1712298658",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0adc13d454ab41bf7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_host",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c4e4b4eb2e11d1d4",
            "arn": "arn:aws:ec2:us-east-1:268236304346:instance/i-014d5f22f9ee2b1a2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-014d5f22f9ee2b1a2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-049c44187d6c18f69",
            "private_dns": "ip-10-0-101-228.ec2.internal",
            "private_ip": "10.0.101.228",
            "public_dns": "ec2-3-84-173-145.compute-1.amazonaws.com",
            "public_ip": "3.84.173.145",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03975ca1519ee324d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-065824820cc14738a",
            "tags": {
              "Environment": "dev",
              "Name": "public-bastion-host",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public-bastion-host",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "public-bastion-host"
            },
            "vpc_security_group_ids": [
              "sg-098b85ba17eab3eeb"
            ]
          },
          "dependencies": [
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.aws_subnet.public",
            "data.aws_ami.amzlinux2",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route_table_association.outpost",
            "module.public_bastion_sg.aws_security_group.this",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:268236304346:security-group/sg-098b85ba17eab3eeb",
            "description": "Security Group managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-098b85ba17eab3eeb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public-bastion-sg-20221110144830468200000001",
            "name_prefix": "public-bastion-sg-",
            "owner_id": "268236304346",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-bastion-sg",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "public-bastion-sg",
              "environment": "dev",
              "owners": "sap"
            },
            "timeouts": null,
            "vpc_id": "vpc-064730aa0adf435ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-1030374311",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-098b85ba17eab3eeb",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-1622347138",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-098b85ba17eab3eeb",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ccdbd66a8b943e5c",
            "association_id": "eipassoc-0fc428f88802d1503",
            "domain": "vpc",
            "id": "eipalloc-0ccdbd66a8b943e5c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03adf66cca5bb62e0",
            "private_dns": "ip-10-0-101-21.ec2.internal",
            "private_ip": "10.0.101.21",
            "public_dns": "ec2-34-203-152-109.compute-1.amazonaws.com",
            "public_ip": "34.203.152.109",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-sap-myvpc-us-east-1a",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "dev-sap-myvpc-us-east-1a",
              "environment": "dev",
              "owners": "sap"
            },
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:268236304346:internet-gateway/igw-062b774d5e2f03a3a",
            "id": "igw-062b774d5e2f03a3a",
            "owner_id": "268236304346",
            "tags": {
              "Name": "dev-sap-myvpc",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "dev-sap-myvpc",
              "environment": "dev",
              "owners": "sap"
            },
            "vpc_id": "vpc-064730aa0adf435ff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ccdbd66a8b943e5c",
            "connectivity_type": "public",
            "id": "nat-0520dcb395dd2208f",
            "network_interface_id": "eni-03adf66cca5bb62e0",
            "private_ip": "10.0.101.21",
            "public_ip": "34.203.152.109",
            "subnet_id": "subnet-065824820cc14738a",
            "tags": {
              "Name": "dev-sap-myvpc-us-east-1a",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "dev-sap-myvpc-us-east-1a",
              "environment": "dev",
              "owners": "sap"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e69a5bc1d1b6ed0d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0520dcb395dd2208f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e69a5bc1d1b6ed0d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_eip.nat"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-062b774d5e2f03a3a",
            "id": "r-rtb-05285fa45d1f183e31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05285fa45d1f183e3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_internet_gateway.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:268236304346:route-table/rtb-0e69a5bc1d1b6ed0d",
            "id": "rtb-0e69a5bc1d1b6ed0d",
            "owner_id": "268236304346",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0520dcb395dd2208f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-sap-myvpc-private",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "dev-sap-myvpc-private",
              "environment": "dev",
              "owners": "sap"
            },
            "timeouts": null,
            "vpc_id": "vpc-064730aa0adf435ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:268236304346:route-table/rtb-05285fa45d1f183e3",
            "id": "rtb-05285fa45d1f183e3",
            "owner_id": "268236304346",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-062b774d5e2f03a3a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-sap-myvpc-public",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "dev-sap-myvpc-public",
              "environment": "dev",
              "owners": "sap"
            },
            "timeouts": null,
            "vpc_id": "vpc-064730aa0adf435ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05403b904933989ce",
            "route_table_id": "rtb-0e69a5bc1d1b6ed0d",
            "subnet_id": "subnet-00d5ba1464177c0b2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.database"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0109fe7a9cd673ec9",
            "route_table_id": "rtb-0e69a5bc1d1b6ed0d",
            "subnet_id": "subnet-04140c31cab77ce11"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3d23aa9bddd0b1c",
            "route_table_id": "rtb-0e69a5bc1d1b6ed0d",
            "subnet_id": "subnet-0e7ac9ebdb52ec26c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b1c26dfc6c28e97",
            "route_table_id": "rtb-0e69a5bc1d1b6ed0d",
            "subnet_id": "subnet-049a22aea54de313f"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.private"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dde46c2e48efafc8",
            "route_table_id": "rtb-05285fa45d1f183e3",
            "subnet_id": "subnet-065824820cc14738a"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.public"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bab7fe70953b3089",
            "route_table_id": "rtb-05285fa45d1f183e3",
            "subnet_id": "subnet-0f18a361179adb122"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:268236304346:subnet/subnet-00d5ba1464177c0b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d5ba1464177c0b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "268236304346",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-sap-myvpc-db-us-east-1a",
              "Type": "Private Database Subnets",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "dev-sap-myvpc-db-us-east-1a",
              "Type": "Private Database Subnets",
              "environment": "dev",
              "owners": "sap"
            },
            "vpc_id": "vpc-064730aa0adf435ff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:268236304346:subnet/subnet-04140c31cab77ce11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.152.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04140c31cab77ce11",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "268236304346",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-sap-myvpc-db-us-east-1b",
              "Type": "Private Database Subnets",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "dev-sap-myvpc-db-us-east-1b",
              "Type": "Private Database Subnets",
              "environment": "dev",
              "owners": "sap"
            },
            "vpc_id": "vpc-064730aa0adf435ff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:268236304346:subnet/subnet-0e7ac9ebdb52ec26c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7ac9ebdb52ec26c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "268236304346",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-sap-myvpc-private-us-east-1a",
              "Type": "Private Subnets",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "dev-sap-myvpc-private-us-east-1a",
              "Type": "Private Subnets",
              "environment": "dev",
              "owners": "sap"
            },
            "vpc_id": "vpc-064730aa0adf435ff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:268236304346:subnet/subnet-049a22aea54de313f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049a22aea54de313f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "268236304346",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-sap-myvpc-private-us-east-1b",
              "Type": "Private Subnets",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "dev-sap-myvpc-private-us-east-1b",
              "Type": "Private Subnets",
              "environment": "dev",
              "owners": "sap"
            },
            "vpc_id": "vpc-064730aa0adf435ff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:268236304346:subnet/subnet-065824820cc14738a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065824820cc14738a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "268236304346",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-sap-myvpc-public-us-east-1a",
              "Type": "Public Subnets",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "dev-sap-myvpc-public-us-east-1a",
              "Type": "Public Subnets",
              "environment": "dev",
              "owners": "sap"
            },
            "vpc_id": "vpc-064730aa0adf435ff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:268236304346:subnet/subnet-0f18a361179adb122",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f18a361179adb122",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "268236304346",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-sap-myvpc-public-us-east-1b",
              "Type": "Public Subnets",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "dev-sap-myvpc-public-us-east-1b",
              "Type": "Public Subnets",
              "environment": "dev",
              "owners": "sap"
            },
            "vpc_id": "vpc-064730aa0adf435ff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:268236304346:vpc/vpc-064730aa0adf435ff",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0909bdc7fdf00dc89",
            "default_route_table_id": "rtb-0c33581aec95722b0",
            "default_security_group_id": "sg-0e8a9da5f1f853d0d",
            "dhcp_options_id": "dopt-0bf9180b967e5f985",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-064730aa0adf435ff",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c33581aec95722b0",
            "owner_id": "268236304346",
            "tags": {
              "Name": "dev-sap-myvpc",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "dev-sap-myvpc",
              "environment": "dev",
              "owners": "sap"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}